--- a/Hands-On Machine Learning with Scikit-Learn and TensorFlow2/05_support_vector_machines.ipynb
+++ b/Hands-On Machine Learning with Scikit-Learn and TensorFlow2/05_support_vector_machines.ipynb
@@ -31,7 +31,8 @@
     },
     "colab": {
       "name": "05_support_vector_machines.ipynb",
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     }
   },
   "cells": [
@@ -834,21 +835,25 @@
         "outputId": "6ee57917-c347-43a3-ecb6-6812b3dc58ff"
       },
       "source": [
+        "#with this function we make a prediction for evervy single point in the space to be represented and plot them\n",
         "def plot_predictions(clf, axes):\n",
-        "    x0s = np.linspace(axes[0], axes[1], 100)\n",
-        "    x1s = np.linspace(axes[2], axes[3], 100)\n",
-        "    x0, x1 = np.meshgrid(x0s, x1s)\n",
-        "    X = np.c_[x0.ravel(), x1.ravel()]\n",
-        "    y_pred = clf.predict(X).reshape(x0.shape)\n",
-        "    y_decision = clf.decision_function(X).reshape(x0.shape)\n",
-        "    plt.contourf(x0, x1, y_pred, cmap=plt.cm.brg, alpha=0.2)\n",
-        "    plt.contourf(x0, x1, y_decision, cmap=plt.cm.brg, alpha=0.1)\n",
+        "    x0s = np.linspace(axes[0], axes[1], 100) # here we create an array with 100 values between -1.5 to 2.5 for the X1 values\n",
+        "    x1s = np.linspace(axes[2], axes[3], 100) # here we create an array with 100 values between -1 to 1.5 for the X2 values\n",
+        "    x0, x1 = np.meshgrid(x0s, x1s)  # here we create 2 matrix with 100 copies of the arrays created before\n",
+        "    X = np.c_[x0.ravel(), x1.ravel()] # here we convert the 100 x 100 matrix created before into arrays with 10000 values each \n",
+        "    #then join them in a matrix (X). the resulting matrix has two columns (xo & x1) and 100x100 = 10000 rows \n",
+        "    y_pred = clf.predict(X).reshape(x0.shape) # here we do a prediction for every single point in the space to be represented\n",
+        "    #for every row of X. Then reshape X back to a 100 x 100 matrix. The Results are the predicted classes\n",
+        "    y_decision = clf.decision_function(X).reshape(x0.shape)# here we calculate the margin (distance to the Hyperplane) for every single point in \n",
+        "    #the space to be represented for every row of X. Then reshape X back to a 100 x 100 matrix. \"-\"-values = Class 0, \"+\"-values = Class 1\n",
+        "    plt.contourf(x0, x1, y_pred, cmap=plt.cm.brg, alpha=0.2) # plot predictions\n",
+        "    plt.contourf(x0, x1, y_decision, cmap=plt.cm.brg, alpha=0.1) # plot distance to the margin\n",
         "\n",
-        "plot_predictions(polynomial_svm_clf, [-1.5, 2.5, -1, 1.5])\n",
-        "plot_dataset(X, y, [-1.5, 2.5, -1, 1.5])\n",
+        "plot_predictions(polynomial_svm_clf, [-1.5, 2.5, -1, 1.5]) # plot predictions and decisions for  evervy single point in the space to be represented \n",
+        "plot_dataset(X, y, [-1.5, 2.5, -1, 1.5]) # plot the dataset\n",
         "\n",
         "save_fig(\"moons_polynomial_svc_plot\")\n",
-        "plt.show()"
+        "plt.show()\n"
       ],
       "execution_count": 0,
       "outputs": [
@@ -875,12 +880,25 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "DlpSwzpy0a0I",
+        "colab_type": "text"
+      },
+      "source": [
+        "### *Polynomial Kernel*"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "yORWNzdAzqLd",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "3e350709-1d90-4cf7-a8e5-9efe8c72cd5c"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 231
+        },
+        "outputId": "4bd5d06c-f511-4de1-8bb5-f18bd11886be"
       },
       "source": [
         "from sklearn.svm import SVC\n",
@@ -891,23 +909,18 @@
         "    ])\n",
         "poly_kernel_svm_clf.fit(X, y)"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "Pipeline(memory=None,\n",
-              "     steps=[('scaler', StandardScaler(copy=True, with_mean=True, with_std=True)), ('svm_clf', SVC(C=5, cache_size=200, class_weight=None, coef0=1,\n",
-              "  decision_function_shape='ovr', degree=3, gamma='auto_deprecated',\n",
-              "  kernel='poly', max_iter=-1, probability=False, random_state=None,\n",
-              "  shrinking=True, tol=0.001, verbose=False))])"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 15
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-1-3f30c76bd89c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msvm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSVC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m poly_kernel_svm_clf = Pipeline([\n\u001b[0m\u001b[1;32m      4\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0;34m\"scaler\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mStandardScaler\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m         \u001b[0;34m(\u001b[0m\u001b[0;34m\"svm_clf\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkernel\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m\"poly\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdegree\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcoef0\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mC\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m5\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'Pipeline' is not defined"
+          ]
         }
       ]
     },
@@ -920,6 +933,7 @@
         "outputId": "94e4d8f8-aa20-4bf1-f34d-142ac74278f9"
       },
       "source": [
+        "#M coef0 controls how much the model is influenced by highdegree polynomials versus low-degree polynomials\n",
         "poly100_kernel_svm_clf = Pipeline([\n",
         "        (\"scaler\", StandardScaler()),\n",
         "        (\"svm_clf\", SVC(kernel=\"poly\", degree=10, coef0=100, C=5))\n",
@@ -993,6 +1007,16 @@
             "needs_background": "light"
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dTleDBsd0nt3",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Similarity Features"
       ]
     },
     {
@@ -1112,6 +1136,16 @@
           ],
           "name": "stdout"
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "q262n06f0xJ8",
+        "colab_type": "text"
+      },
+      "source": [
+        "## Gaussian RBF Kernel"
       ]
     },
     {
