with my comments

--- a/Backend_specs_example.ipynb
+++ b/Backend_specs_example.ipynb
@@ -29,27 +29,31 @@
       "metadata": {
         "id": "qhfeK3A6N_wi",
         "colab_type": "code",
-        "outputId": "24c7733d-cf2a-4b56-a805-53f9710517f5",
+        "outputId": "9d1d12e4-8177-4e72-c126-696ae4bea474",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 136
+          "height": 187
         }
       },
       "source": [
+        "#disk information\n",
         "!df -h"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Filesystem      Size  Used Avail Use% Mounted on\r\n",
-            "overlay          46G  3.7G   42G   9% /\r\n",
-            "tmpfs           6.4G     0  6.4G   0% /dev\r\n",
-            "tmpfs           6.4G     0  6.4G   0% /sys/fs/cgroup\r\n",
-            "/dev/sda1        46G  3.7G   42G   9% /content\r\n",
-            "shm              64M     0   64M   0% /dev/shm\r\n",
-            "tmpfs           6.4G     0  6.4G   0% /sys/firmware\r\n"
+            "Filesystem      Size  Used Avail Use% Mounted on\n",
+            "overlay         108G   32G   72G  31% /\n",
+            "tmpfs            64M     0   64M   0% /dev\n",
+            "tmpfs           6.4G     0  6.4G   0% /sys/fs/cgroup\n",
+            "shm             5.9G     0  5.9G   0% /dev/shm\n",
+            "tmpfs           6.4G   12K  6.4G   1% /var/colab\n",
+            "/dev/sda1       114G   33G   82G  29% /etc/hosts\n",
+            "tmpfs           6.4G     0  6.4G   0% /proc/acpi\n",
+            "tmpfs           6.4G     0  6.4G   0% /proc/scsi\n",
+            "tmpfs           6.4G     0  6.4G   0% /sys/firmware\n"
           ],
           "name": "stdout"
         }
@@ -60,74 +64,75 @@
       "metadata": {
         "id": "m-qNDYGxN3-w",
         "colab_type": "code",
-        "outputId": "e496b2d4-d070-43ff-fa0b-b53dd401fb5e",
+        "outputId": "e7f271ea-924d-4025-cf5d-e052f51a523e",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 955
         }
       },
       "source": [
+        "#CPU specs\n",
         "!cat /proc/cpuinfo"
       ],
-      "execution_count": 0,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "processor\t: 0\r\n",
-            "vendor_id\t: GenuineIntel\r\n",
-            "cpu family\t: 6\r\n",
-            "model\t\t: 79\r\n",
-            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\r\n",
-            "stepping\t: 0\r\n",
-            "microcode\t: 0x1\r\n",
-            "cpu MHz\t\t: 2199.998\r\n",
-            "cache size\t: 56320 KB\r\n",
-            "physical id\t: 0\r\n",
-            "siblings\t: 2\r\n",
-            "core id\t\t: 0\r\n",
-            "cpu cores\t: 1\r\n",
-            "apicid\t\t: 0\r\n",
-            "initial apicid\t: 0\r\n",
-            "fpu\t\t: yes\r\n",
-            "fpu_exception\t: yes\r\n",
-            "cpuid level\t: 13\r\n",
-            "wp\t\t: yes\r\n",
-            "flags\t\t: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc rep_good nopl xtopology nonstop_tsc eagerfpu pni pclmulqdq ssse3 fma cx16 sse4_1 sse4_2 x2apic movbe popcnt aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms rtm rdseed adx xsaveopt\r\n",
-            "bugs\t\t:\r\n",
-            "bogomips\t: 4399.99\r\n",
-            "clflush size\t: 64\r\n",
-            "cache_alignment\t: 64\r\n",
-            "address sizes\t: 46 bits physical, 48 bits virtual\r\n",
-            "power management:\r\n",
-            "\r\n",
-            "processor\t: 1\r\n",
-            "vendor_id\t: GenuineIntel\r\n",
-            "cpu family\t: 6\r\n",
-            "model\t\t: 79\r\n",
-            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\r\n",
-            "stepping\t: 0\r\n",
-            "microcode\t: 0x1\r\n",
-            "cpu MHz\t\t: 2199.998\r\n",
-            "cache size\t: 56320 KB\r\n",
-            "physical id\t: 0\r\n",
-            "siblings\t: 2\r\n",
-            "core id\t\t: 0\r\n",
-            "cpu cores\t: 1\r\n",
-            "apicid\t\t: 1\r\n",
-            "initial apicid\t: 1\r\n",
-            "fpu\t\t: yes\r\n",
-            "fpu_exception\t: yes\r\n",
-            "cpuid level\t: 13\r\n",
-            "wp\t\t: yes\r\n",
-            "flags\t\t: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc rep_good nopl xtopology nonstop_tsc eagerfpu pni pclmulqdq ssse3 fma cx16 sse4_1 sse4_2 x2apic movbe popcnt aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms rtm rdseed adx xsaveopt\r\n",
-            "bugs\t\t:\r\n",
-            "bogomips\t: 4399.99\r\n",
-            "clflush size\t: 64\r\n",
-            "cache_alignment\t: 64\r\n",
-            "address sizes\t: 46 bits physical, 48 bits virtual\r\n",
-            "power management:\r\n",
-            "\r\n"
+            "processor\t: 0\n",
+            "vendor_id\t: GenuineIntel\n",
+            "cpu family\t: 6\n",
+            "model\t\t: 79\n",
+            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\n",
+            "stepping\t: 0\n",
+            "microcode\t: 0x1\n",
+            "cpu MHz\t\t: 2200.000\n",
+            "cache size\t: 56320 KB\n",
+            "physical id\t: 0\n",
+            "siblings\t: 2\n",
+            "core id\t\t: 0\n",
+            "cpu cores\t: 1\n",
+            "apicid\t\t: 0\n",
+            "initial apicid\t: 0\n",
+            "fpu\t\t: yes\n",
+            "fpu_exception\t: yes\n",
+            "cpuid level\t: 13\n",
+            "wp\t\t: yes\n",
+            "flags\t\t: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc rep_good nopl xtopology nonstop_tsc cpuid tsc_known_freq pni pclmulqdq ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch invpcid_single ssbd ibrs ibpb stibp fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms invpcid rtm rdseed adx smap xsaveopt arat md_clear arch_capabilities\n",
+            "bugs\t\t: cpu_meltdown spectre_v1 spectre_v2 spec_store_bypass l1tf mds swapgs taa itlb_multihit\n",
+            "bogomips\t: 4400.00\n",
+            "clflush size\t: 64\n",
+            "cache_alignment\t: 64\n",
+            "address sizes\t: 46 bits physical, 48 bits virtual\n",
+            "power management:\n",
+            "\n",
+            "processor\t: 1\n",
+            "vendor_id\t: GenuineIntel\n",
+            "cpu family\t: 6\n",
+            "model\t\t: 79\n",
+            "model name\t: Intel(R) Xeon(R) CPU @ 2.20GHz\n",
+            "stepping\t: 0\n",
+            "microcode\t: 0x1\n",
+            "cpu MHz\t\t: 2200.000\n",
+            "cache size\t: 56320 KB\n",
+            "physical id\t: 0\n",
+            "siblings\t: 2\n",
+            "core id\t\t: 0\n",
+            "cpu cores\t: 1\n",
+            "apicid\t\t: 1\n",
+            "initial apicid\t: 1\n",
+            "fpu\t\t: yes\n",
+            "fpu_exception\t: yes\n",
+            "cpuid level\t: 13\n",
+            "wp\t\t: yes\n",
+            "flags\t\t: fpu vme de pse tsc msr pae mce cx8 apic sep mtrr pge mca cmov pat pse36 clflush mmx fxsr sse sse2 ss ht syscall nx pdpe1gb rdtscp lm constant_tsc rep_good nopl xtopology nonstop_tsc cpuid tsc_known_freq pni pclmulqdq ssse3 fma cx16 pcid sse4_1 sse4_2 x2apic movbe popcnt aes xsave avx f16c rdrand hypervisor lahf_lm abm 3dnowprefetch invpcid_single ssbd ibrs ibpb stibp fsgsbase tsc_adjust bmi1 hle avx2 smep bmi2 erms invpcid rtm rdseed adx smap xsaveopt arat md_clear arch_capabilities\n",
+            "bugs\t\t: cpu_meltdown spectre_v1 spectre_v2 spec_store_bypass l1tf mds swapgs taa itlb_multihit\n",
+            "bogomips\t: 4400.00\n",
+            "clflush size\t: 64\n",
+            "cache_alignment\t: 64\n",
+            "address sizes\t: 46 bits physical, 48 bits virtual\n",
+            "power management:\n",
+            "\n"
           ],
           "name": "stdout"
         }
@@ -138,67 +143,85 @@
       "metadata": {
         "id": "QlvkREnwN-RA",
         "colab_type": "code",
-        "outputId": "d3135100-efc4-42f2-d830-6cde569faf35",
+        "outputId": "6d730bde-2bb4-44ab-dd51-f3eb414ddb69",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 748
+          "height": 816
         }
       },
       "source": [
+        "#memory\n",
         "!cat /proc/meminfo"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "MemTotal:       13341992 kB\r\n",
-            "MemFree:         8670124 kB\r\n",
-            "MemAvailable:   12753184 kB\r\n",
-            "Buffers:          115848 kB\r\n",
-            "Cached:          3865368 kB\r\n",
-            "SwapCached:            0 kB\r\n",
-            "Active:          1160124 kB\r\n",
-            "Inactive:        3077576 kB\r\n",
-            "Active(anon):     256804 kB\r\n",
-            "Inactive(anon):      324 kB\r\n",
-            "Active(file):     903320 kB\r\n",
-            "Inactive(file):  3077252 kB\r\n",
-            "Unevictable:           0 kB\r\n",
-            "Mlocked:               0 kB\r\n",
-            "SwapTotal:             0 kB\r\n",
-            "SwapFree:              0 kB\r\n",
-            "Dirty:               772 kB\r\n",
-            "Writeback:             0 kB\r\n",
-            "AnonPages:        256548 kB\r\n",
-            "Mapped:           167332 kB\r\n",
-            "Shmem:               656 kB\r\n",
-            "Slab:             377108 kB\r\n",
-            "SReclaimable:     355904 kB\r\n",
-            "SUnreclaim:        21204 kB\r\n",
-            "KernelStack:        3040 kB\r\n",
-            "PageTables:         4044 kB\r\n",
-            "NFS_Unstable:          0 kB\r\n",
-            "Bounce:                0 kB\r\n",
-            "WritebackTmp:          0 kB\r\n",
-            "CommitLimit:     6670996 kB\r\n",
-            "Committed_AS:    1194088 kB\r\n",
-            "VmallocTotal:   34359738367 kB\r\n",
-            "VmallocUsed:           0 kB\r\n",
-            "VmallocChunk:          0 kB\r\n",
-            "AnonHugePages:         0 kB\r\n",
-            "HugePages_Total:       0\r\n",
-            "HugePages_Free:        0\r\n",
-            "HugePages_Rsvd:        0\r\n",
-            "HugePages_Surp:        0\r\n",
-            "Hugepagesize:       2048 kB\r\n",
-            "DirectMap4k:       59380 kB\r\n",
-            "DirectMap2M:     4134912 kB\r\n",
-            "DirectMap1G:    11534336 kB\r\n"
+            "MemTotal:       13333556 kB\n",
+            "MemFree:        10706772 kB\n",
+            "MemAvailable:   12486864 kB\n",
+            "Buffers:           70880 kB\n",
+            "Cached:          1867776 kB\n",
+            "SwapCached:            0 kB\n",
+            "Active:           707812 kB\n",
+            "Inactive:        1662552 kB\n",
+            "Active(anon):     411140 kB\n",
+            "Inactive(anon):      316 kB\n",
+            "Active(file):     296672 kB\n",
+            "Inactive(file):  1662236 kB\n",
+            "Unevictable:           0 kB\n",
+            "Mlocked:               0 kB\n",
+            "SwapTotal:             0 kB\n",
+            "SwapFree:              0 kB\n",
+            "Dirty:               196 kB\n",
+            "Writeback:             0 kB\n",
+            "AnonPages:        431812 kB\n",
+            "Mapped:           220060 kB\n",
+            "Shmem:               904 kB\n",
+            "Slab:             160756 kB\n",
+            "SReclaimable:     124152 kB\n",
+            "SUnreclaim:        36604 kB\n",
+            "KernelStack:        3488 kB\n",
+            "PageTables:         5268 kB\n",
+            "NFS_Unstable:          0 kB\n",
+            "Bounce:                0 kB\n",
+            "WritebackTmp:          0 kB\n",
+            "CommitLimit:     6666776 kB\n",
+            "Committed_AS:    2508184 kB\n",
+            "VmallocTotal:   34359738367 kB\n",
+            "VmallocUsed:           0 kB\n",
+            "VmallocChunk:          0 kB\n",
+            "Percpu:              920 kB\n",
+            "AnonHugePages:         0 kB\n",
+            "ShmemHugePages:        0 kB\n",
+            "ShmemPmdMapped:        0 kB\n",
+            "HugePages_Total:       0\n",
+            "HugePages_Free:        0\n",
+            "HugePages_Rsvd:        0\n",
+            "HugePages_Surp:        0\n",
+            "Hugepagesize:       2048 kB\n",
+            "Hugetlb:               0 kB\n",
+            "DirectMap4k:       76988 kB\n",
+            "DirectMap2M:     5165056 kB\n",
+            "DirectMap1G:    10485760 kB\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9GLcJssaBlnn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
