--- a/Backend_specs_example.ipynb
+++ b/Backend_specs_example.ipynb
@@ -11,7 +11,8 @@
     "kernelspec": {
       "name": "python3",
       "display_name": "Python 3"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -29,7 +30,7 @@
       "metadata": {
         "id": "qhfeK3A6N_wi",
         "colab_type": "code",
-        "outputId": "9d1d12e4-8177-4e72-c126-696ae4bea474",
+        "outputId": "0c2975e1-8834-4331-8a70-0d4cb5f387cb",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 187
@@ -39,18 +40,18 @@
         "#disk information\n",
         "!df -h"
       ],
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Filesystem      Size  Used Avail Use% Mounted on\n",
-            "overlay         108G   32G   72G  31% /\n",
+            "overlay          69G   32G   34G  49% /\n",
             "tmpfs            64M     0   64M   0% /dev\n",
             "tmpfs           6.4G     0  6.4G   0% /sys/fs/cgroup\n",
-            "shm             5.9G     0  5.9G   0% /dev/shm\n",
-            "tmpfs           6.4G   12K  6.4G   1% /var/colab\n",
-            "/dev/sda1       114G   33G   82G  29% /etc/hosts\n",
+            "shm             5.8G     0  5.8G   0% /dev/shm\n",
+            "tmpfs           6.4G   16K  6.4G   1% /var/colab\n",
+            "/dev/sda1        75G   33G   43G  44% /opt/bin\n",
             "tmpfs           6.4G     0  6.4G   0% /proc/acpi\n",
             "tmpfs           6.4G     0  6.4G   0% /proc/scsi\n",
             "tmpfs           6.4G     0  6.4G   0% /sys/firmware\n"
@@ -64,7 +65,7 @@
       "metadata": {
         "id": "m-qNDYGxN3-w",
         "colab_type": "code",
-        "outputId": "e7f271ea-924d-4025-cf5d-e052f51a523e",
+        "outputId": "92202449-00b6-4bc1-b671-3b5f9e57087c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 955
@@ -74,7 +75,7 @@
         "#CPU specs\n",
         "!cat /proc/cpuinfo"
       ],
-      "execution_count": 1,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -153,7 +154,7 @@
         "#memory\n",
         "!cat /proc/meminfo"
       ],
-      "execution_count": 3,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -214,6 +215,114 @@
       "cell_type": "code",
       "metadata": {
         "id": "9GLcJssaBlnn",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "wlYy5eKZENjh",
+        "colab_type": "text"
+      },
+      "source": [
+        "**Getting the Most Out of Your Google Colab (Tutorial)**"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pSwG-a9REFdL",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "e96b4b6c-a305-4029-cfcb-ec0514deedd8"
+      },
+      "source": [
+        "#' ' means CPU whereas '/device:G:0' means GPU\n",
+        "import tensorflow as tf\n",
+        "tf.test.gpu_device_name()"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'/device:GPU:0'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UlLLYIXlD5do",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 238
+        },
+        "outputId": "235ff35e-9659-4080-89e5-e512d03d381a"
+      },
+      "source": [
+        "# memory footprint support libraries/code\n",
+        "!ln -sf /opt/bin/nvidia-smi /usr/bin/nvidia-smi\n",
+        "!pip install gputil\n",
+        "!pip install psutil\n",
+        "!pip install humanize\n",
+        "import psutil\n",
+        "import humanize\n",
+        "import os\n",
+        "import GPUtil as GPU\n",
+        "GPUs = GPU.getGPUs()\n",
+        "# XXX: only one GPU on Colab and isn’t guaranteed\n",
+        "gpu = GPUs[0]\n",
+        "def printm():\n",
+        " process = psutil.Process(os.getpid())\n",
+        " print(\"Gen RAM Free: \" + humanize.naturalsize( psutil.virtual_memory().available ), \" | Proc size: \" + humanize.naturalsize( process.memory_info().rss))\n",
+        " print(\"GPU RAM Free: {0:.0f}MB | Used: {1:.0f}MB | Util {2:3.0f}% | Total {3:.0f}MB\".format(gpu.memoryFree, gpu.memoryUsed, gpu.memoryUtil*100, gpu.memoryTotal))\n",
+        "printm() "
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Collecting gputil\n",
+            "  Downloading https://files.pythonhosted.org/packages/ed/0e/5c61eedde9f6c87713e89d794f01e378cfd9565847d4576fa627d758c554/GPUtil-1.4.0.tar.gz\n",
+            "Building wheels for collected packages: gputil\n",
+            "  Building wheel for gputil (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for gputil: filename=GPUtil-1.4.0-cp36-none-any.whl size=7413 sha256=8da295f7b3957ad2ccd89cb5e9e1ce9bf5ee3ac893ec1d4a50d1d2f54c374268\n",
+            "  Stored in directory: /root/.cache/pip/wheels/3d/77/07/80562de4bb0786e5ea186911a2c831fdd0018bda69beab71fd\n",
+            "Successfully built gputil\n",
+            "Installing collected packages: gputil\n",
+            "Successfully installed gputil-1.4.0\n",
+            "Requirement already satisfied: psutil in /usr/local/lib/python3.6/dist-packages (5.4.8)\n",
+            "Requirement already satisfied: humanize in /usr/local/lib/python3.6/dist-packages (0.5.1)\n",
+            "Gen RAM Free: 12.3 GB  | Proc size: 936.4 MB\n",
+            "GPU RAM Free: 11311MB | Used: 130MB | Util   1% | Total 11441MB\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "1O5RkGgSEX3V",
         "colab_type": "code",
         "colab": {}
       },
