--- a/Hands-On Machine Learning with Scikit-Learn and TensorFlow2/Imports.ipynb
+++ b/Hands-On Machine Learning with Scikit-Learn and TensorFlow2/Imports.ipynb
@@ -58,6 +58,7 @@
         "    from sklearn.linear_model import SGDClassifier #Stochastic Gradient Descent Classifier'\n",
         "    from sklearn.ensemble import RandomForestClassifier\n",
         "    from sklearn.linear_model import LogisticRegression\n",
+        "    from sklearn.neighbors import KNeighborsClassifier\n",
         "\n",
         "### for Cross validation\n",
         "    from sklearn.model_selection import cross_val_score\n",
@@ -289,15 +290,27 @@
         "#models\n",
         "from sklearn.cluster import KMeans\n",
         "from sklearn.cluster import MiniBatchKMeans\n",
+        "from sklearn.cluster import DBSCAN\n",
+        "\n",
+        "from sklearn.mixture import GaussianMixture\n",
+        "from sklearn.mixture import BayesianGaussianMixture\n",
+        "\n",
+        "#... other models\n",
+        "from sklearn.cluster import AgglomerativeClustering\n",
+        "from sklearn.cluster import SpectralClustering\n",
         "\n",
         "#Metrics\n",
         "from sklearn.metrics import silhouette_score\n",
         "from sklearn.metrics import silhouette_samples\n",
         "\n",
         "#data preparation\n",
-        "from matplotlib.image import imread\n"
+        "from matplotlib.image import imread\n",
+        "\n",
+        "#tips\n",
+        "y_pred is kmeans.labels_ #cool way to compare if 2 arrays are identical\n",
+        "np.mean(y_train_partially_propagated == y_train[partially_propagated]) # to get percentage of similarity between two vectors\n"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -310,7 +323,7 @@
       "source": [
         ""
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
