--- a/Hands-On Machine Learning with Scikit-Learn and TensorFlow2/11_training_deep_neural_networks.ipynb
+++ b/Hands-On Machine Learning with Scikit-Learn and TensorFlow2/11_training_deep_neural_networks.ipynb
@@ -113,7 +113,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "22116c6c-db7d-4fdd-9631-3429f79f1c01"
+        "outputId": "b1e37078-f785-48e2-bb94-e20f0f77e15d"
       },
       "source": [
         "# Python ≥3.5 is required\n",
@@ -165,7 +165,7 @@
         "        plt.tight_layout()\n",
         "    plt.savefig(path, format=fig_extension, dpi=resolution)"
       ],
-      "execution_count": 29,
+      "execution_count": 63,
       "outputs": [
         {
           "output_type": "stream",
@@ -643,7 +643,7 @@
         "X_valid, X_train = X_train_full[:5000], X_train_full[5000:]\n",
         "y_valid, y_train = y_train_full[:5000], y_train_full[5000:]"
       ],
-      "execution_count": 30,
+      "execution_count": 64,
       "outputs": []
     },
     {
@@ -1190,7 +1190,7 @@
         "X_valid_scaled = (X_valid - pixel_means) / pixel_stds\n",
         "X_test_scaled = (X_test - pixel_means) / pixel_stds"
       ],
-      "execution_count": 34,
+      "execution_count": 65,
       "outputs": []
     },
     {
@@ -2583,7 +2583,7 @@
       "source": [
         "optimizer = keras.optimizers.Adagrad(lr=0.001)"
       ],
-      "execution_count": null,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -2606,7 +2606,7 @@
       "source": [
         "optimizer = keras.optimizers.RMSprop(lr=0.001, rho=0.9)"
       ],
-      "execution_count": null,
+      "execution_count": 70,
       "outputs": []
     },
     {
@@ -2629,7 +2629,7 @@
       "source": [
         "optimizer = keras.optimizers.Adam(lr=0.001, beta_1=0.9, beta_2=0.999)"
       ],
-      "execution_count": null,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -2652,7 +2652,7 @@
       "source": [
         "optimizer = keras.optimizers.Adamax(lr=0.001, beta_1=0.9, beta_2=0.999)"
       ],
-      "execution_count": null,
+      "execution_count": 72,
       "outputs": []
     },
     {
@@ -2675,7 +2675,7 @@
       "source": [
         "optimizer = keras.optimizers.Nadam(lr=0.001, beta_1=0.9, beta_2=0.999)"
       ],
-      "execution_count": null,
+      "execution_count": 73,
       "outputs": []
     },
     {
@@ -2719,7 +2719,7 @@
       "source": [
         "optimizer = keras.optimizers.SGD(lr=0.01, decay=1e-4)"
       ],
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2739,7 +2739,7 @@
         "  x=np.append(x,0.01/(1+i*1e-4))\n",
         "plt.plot(x)"
       ],
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2789,7 +2789,7 @@
         "  x=np.append(x,learning_rate / (1 + decay * i * n_steps_per_epoch))\n",
         "plt.plot(x)"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -2834,7 +2834,7 @@
         "])\n",
         "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=optimizer, metrics=[\"accuracy\"])"
       ],
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -2853,7 +2853,7 @@
         "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
         "                    validation_data=(X_valid_scaled, y_valid))"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2942,7 +2942,7 @@
         "\n",
         "n_steps_per_epoch "
       ],
-      "execution_count": 46,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3002,7 +3002,7 @@
         "def exponential_decay_fn(epoch):\n",
         "    return 0.01 * 0.1**(epoch / 20)"
       ],
-      "execution_count": 52,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3020,7 +3020,7 @@
         "\n",
         "exponential_decay_fn = exponential_decay(lr0=0.01, s=20)"
       ],
-      "execution_count": 53,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3040,7 +3040,7 @@
         "model.compile(loss=\"sparse_categorical_crossentropy\", optimizer=\"nadam\", metrics=[\"accuracy\"])\n",
         "n_epochs = 25"
       ],
-      "execution_count": 54,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -3060,7 +3060,7 @@
         "                    validation_data=(X_valid_scaled, y_valid),\n",
         "                    callbacks=[lr_scheduler])"
       ],
-      "execution_count": 55,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3140,7 +3140,7 @@
         "plt.grid(True)\n",
         "plt.show()"
       ],
-      "execution_count": 56,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -3697,7 +3697,7 @@
         "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
         "                    validation_data=(X_valid_scaled, y_valid))"
       ],
-      "execution_count": 57,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -3771,7 +3771,7 @@
       "source": [
         "dir(keras.optimizers)"
       ],
-      "execution_count": 61,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -3823,7 +3823,7 @@
       "source": [
         "dir(keras.optimizers.schedules)"
       ],
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4151,8 +4151,11 @@
       "metadata": {
         "id": "DbJ_lHLspoP5",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "5131f663-6407-4de6-b175-af7fc13f98fc"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "021ac748-a864-4260-a806-11a8b3fd0221"
       },
       "source": [
         "model = keras.models.Sequential([\n",
@@ -4171,16 +4174,15 @@
         "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
         "                    validation_data=(X_valid_scaled, y_valid))"
       ],
-      "execution_count": null,
+      "execution_count": 66,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 55000 samples, validate on 5000 samples\n",
             "Epoch 1/2\n",
-            "55000/55000 [==============================] - 7s 130us/sample - loss: 1.5735 - accuracy: 0.8126 - val_loss: 0.7327 - val_accuracy: 0.8222\n",
+            "1719/1719 [==============================] - 13s 7ms/step - loss: 1.6137 - accuracy: 0.8139 - val_loss: 0.7080 - val_accuracy: 0.8340\n",
             "Epoch 2/2\n",
-            "55000/55000 [==============================] - 6s 115us/sample - loss: 0.7186 - accuracy: 0.8260 - val_loss: 0.6929 - val_accuracy: 0.8338\n"
+            "1719/1719 [==============================] - 13s 7ms/step - loss: 0.7198 - accuracy: 0.8244 - val_loss: 0.6875 - val_accuracy: 0.8390\n"
           ],
           "name": "stdout"
         }
@@ -4191,18 +4193,22 @@
       "metadata": {
         "id": "SacAms3xpoP7",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "ed2bdb6f-77eb-486f-8f4c-e49092538598"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "43ac3e0c-defe-4128-8795-66ec8c95badd"
       },
       "source": [
-        "from functools import partial\n",
+        "\n",
+        "from functools import partial #M this is sooo cool!!!!\n",
         "\n",
         "RegularizedDense = partial(keras.layers.Dense,\n",
         "                           activation=\"elu\",\n",
         "                           kernel_initializer=\"he_normal\",\n",
         "                           kernel_regularizer=keras.regularizers.l2(0.01))\n",
         "\n",
-        "model = keras.models.Sequential([\n",
+        "model = keras.models.Sequential([ #M Now the model looks much better!\n",
         "    keras.layers.Flatten(input_shape=[28, 28]),\n",
         "    RegularizedDense(300),\n",
         "    RegularizedDense(100),\n",
@@ -4213,16 +4219,15 @@
         "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
         "                    validation_data=(X_valid_scaled, y_valid))"
       ],
-      "execution_count": null,
+      "execution_count": 67,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 55000 samples, validate on 5000 samples\n",
             "Epoch 1/2\n",
-            "55000/55000 [==============================] - 7s 133us/sample - loss: 1.6006 - accuracy: 0.8129 - val_loss: 0.7374 - val_accuracy: 0.8236\n",
+            "1719/1719 [==============================] - 13s 7ms/step - loss: 1.6678 - accuracy: 0.8120 - val_loss: 0.7197 - val_accuracy: 0.8310\n",
             "Epoch 2/2\n",
-            "55000/55000 [==============================] - 7s 128us/sample - loss: 0.7179 - accuracy: 0.8265 - val_loss: 0.6905 - val_accuracy: 0.8356\n"
+            "1719/1719 [==============================] - 12s 7ms/step - loss: 0.7176 - accuracy: 0.8263 - val_loss: 0.6946 - val_accuracy: 0.8368\n"
           ],
           "name": "stdout"
         }
@@ -4243,8 +4248,11 @@
       "metadata": {
         "id": "sSHaFzXspoP-",
         "colab_type": "code",
-        "colab": {},
-        "outputId": "85b07b07-3a5f-46ed-a807-9c0e39ff2a22"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "741a780a-041a-494e-b81a-666b091a11a5"
       },
       "source": [
         "model = keras.models.Sequential([\n",
@@ -4261,16 +4269,15 @@
         "history = model.fit(X_train_scaled, y_train, epochs=n_epochs,\n",
         "                    validation_data=(X_valid_scaled, y_valid))"
       ],
-      "execution_count": null,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Train on 55000 samples, validate on 5000 samples\n",
             "Epoch 1/2\n",
-            "55000/55000 [==============================] - 8s 139us/sample - loss: 0.5856 - accuracy: 0.7992 - val_loss: 0.3908 - val_accuracy: 0.8570\n",
+            "1719/1719 [==============================] - 13s 8ms/step - loss: 0.5733 - accuracy: 0.8018 - val_loss: 0.3778 - val_accuracy: 0.8570\n",
             "Epoch 2/2\n",
-            "55000/55000 [==============================] - 6s 117us/sample - loss: 0.4260 - accuracy: 0.8443 - val_loss: 0.3389 - val_accuracy: 0.8730\n"
+            "1719/1719 [==============================] - 13s 7ms/step - loss: 0.4239 - accuracy: 0.8443 - val_loss: 0.3403 - val_accuracy: 0.8706\n"
           ],
           "name": "stdout"
         }
